<resources>
    <string name="app_name">RAGApplication</string>
    <string name="room_name">Room Name</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="right_navigation_drawer_header_title">Your documents</string>
    <string name="text_file_title">Text files</string>
    <string name="pdf_file_title">PDF files</string>
    <string name="no_file_found">No file found, please upload something.</string>
    <string name="process_files">Processing files …</string>
    <string name="start_process">Start process</string>
    <string name="untitled_room">Untitled</string>
    <string name="started_processing_files">Started processing files!</string>
    <string name="user_placeholder">User</string>
    <string name="agent_placeholder">Agent</string>
    <string name="time_placeholder">2nd, August - 19:01</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod, nisl eget aliquam ultricies, nunc nisl aliquet nunc, quis aliquam nisl nunc eu nisi. Donec euismod, nisl eget aliquam ultricies, nunc nisl aliquet nunc, quis aliquam nisl nunc eu nisi.</string>
    <string name="left_navigation_drawer_header_title">Your rooms</string>
    <string name="create_new_room">Create new room</string>
    <string name="no_room_found">No room found, please create a new one, upload files and start the chat.</string>
    <string name="default_room_name">Untitled</string>
    <string name="actions">Actions</string>
    <string name="settings">Settings</string>
    <string name="api_key">API Key</string>
    <string name="user_name_placeholder">Username</string>
    <string name="model_name_placeholder">Model name</string>
    <string name="chunk_size_placeholder">Chunk size</string>
    <string name="overlap_size_placeholder">Overlap size</string>
    <string name="dark_light_mode">Dark/Light mode</string>
    <string name="temperature_placeholder">Temperature</string>
    <string name="top_k_placeholder">Top K</string>
    <string name="top_p_placeholder">Top P</string>
    <string name="max_new_tokens_placeholder">Max new tokens</string>
    <string name="safety_settings">Safety settings</string>
    <string name="api_key_helper_text">You can get your API key from <a href="https://makersuite.google.com/app/apikey">Google AI Studio</a> website.</string>
    <string name="user_name_helper_text">This name will be displayed in the chat in your messages.</string>
    <string name="model_name_helper_text">This name will be displayed in the chat in the model response.</string>
    <string name="chunk_size_helper_text">This value will be used to split the text extracted from the file.</string>
    <string name="overlap_size_helper_text">This is the size of the overlap between chunks.</string>
    <string name="temperature_helper_text">Controls the randomness of the model\'s output. Higher values (e.g., 0.8) make output more creative but less focused, while lower values (e.g., 0.2) make output more deterministic and focused.</string>
    <string name="top_k_helper_text">Limits the vocabulary used for model sampling to the top k most likely tokens. Higher values (e.g., 50) include more words, while lower values (e.g., 5) make the model more selective.</string>
    <string name="top_p_helper_text">Limits the vocabulary dynamically based on the cumulative probability of tokens. A higher value (e.g., 0.9) includes more words, while a lower value (e.g., 0.5) makes the model more selective.</string>
    <string name="max_new_tokens_helper_text">Sets the maximum number of tokens the model can generate in response to a prompt. Useful for limiting the length of generated text.</string>
    <string name="safety_settings_helper_text">Adjusts safety features to control the appropriateness of generated content. Higher values prioritize safety, while lower values may allow more creative but potentially sensitive outputs.</string>
    <string name="authentication_section">Authentication settings</string>
    <string name="user_model_section">User and Model Information</string>
    <string name="file_processing_section">File processing configuration</string>
    <string name="model_hyperparameters_section">Model hyperparameters</string>
    <string name="visual_preferences_section">Visual preferences</string>
    <string name="theme_settings">Theme settings</string>
    <string name="prompt">Prompt</string>
    <string name="please_upload_files">Please upload files to start the chat.</string>
    <string name="ready_to_chat">Now you are ready to start the chat.</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="reset_database">Reset database</string>
    <string name="welcome_message">Welcome!</string>
    <string name="setup_description">Please make sure to complete this tutorial by giving the necessary information to start using the app.</string>
    <string name="step_1">Step 1 : Setup the API Key</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="finish_button">Finish</string>
    <string name="checking_api_key">Checking the API Key …</string>
    <string name="step_2">Step 2 : Setup the User and Model Information</string>
    <string name="congratulations">Congratulations! You are now ready to start using the application.</string>
    <string name="vector_database_section">Vector database</string>
    <string name="top_k_entries_placeholder">Top K entries</string>
    <string name="top_k_database_helper_text">This value will be used to get the top k most similar entries from the database.</string>
    <string name="similar_functions">Similarity functions</string>
    <string name="similarity_functions_helper_text">This function will be used to calculate the similarity between the prompt and the database entries.</string>
    <string name="languages_section">Main Language</string>
    <string name="language_settings">Language</string>
    <string name="english_language">English</string>
    <string name="french_language">French</string>
    <string name="confirm_language_change">Do you want to change the language?</string>
    <string name="alert">Alert</string>
    <string name="remove_ads">Remove ads</string>
    <string name="default_web_client_id">172339239262-nn1oubmag8h2fnu1l11pa3f75ak9lb55</string>
    <string name="google_sign_in">Sign In</string>
    <string name="google_sign_out">Sign Out</string>
    <string name="confirm_sign_out">Do you want to Sign Out ?</string>
    <string name="api_sleep_time_clarification"><b>Note:</b> When processing files by default a delay is added because the free version of the Gemini API has some limitations. If you have a paid API Key, then you can disable this delay in the settings.</string>
    <string name="api_key_toggle_delay_off">⚠️ Disable the API request delay. This should be activated only if you have a paid version of the API.</string>

</resources>
