<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".WelcomeScreenActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_message"
        android:textColor="?attr/textPrimaryColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:paddingEnd="32dp"
        android:text="@string/setup_description"
        android:textColor="?attr/textPrimaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <RelativeLayout
        android:id="@+id/page1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/step_1"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apiKeyLayoutWelcomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView13"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apiKeyEditTextWelcomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_key"
                android:textColor="?attr/textPrimaryColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/apiKeyCheckingContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/apiKeyLayoutWelcomeScreen"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/apiKeyProgressBarWelcomeScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/apiKeyTextViewCheckingDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/checking_api_key"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/next1Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/roboto"
            android:text="@string/next_button" />

        <LinearLayout
            android:id="@+id/pageIndicatorsLayoutPage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/next1Button"
            android:layout_alignBottom="@id/next1Button"
            android:layout_alignParentBottom="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/page_indicator_light" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/page_indicator_dark" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:src="@drawable/page_indicator_dark" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/page2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/step_2"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayoutWelcomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView20"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditTextWelcomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_placeholder"
                android:textColor="?attr/textPrimaryColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modelNameLayoutWelcomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameLayoutWelcomeScreen"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modelNameEditTextWelcomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_name_placeholder"
                android:textColor="?attr/textPrimaryColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next2Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/roboto"
            android:text="@string/next_button" />

        <Button
            android:id="@+id/previous2Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/next2Button"
            android:fontFamily="@font/roboto"
            android:text="@string/previous_button" />

        <LinearLayout
            android:id="@+id/pageIndicatorsLayoutPage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/previous2Button"
            android:layout_alignBottom="@id/previous2Button"
            android:layout_alignParentBottom="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/page_indicator_dark" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/page_indicator_light" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:src="@drawable/page_indicator_dark" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/page3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/congratulations"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/confirmButtonWelcomeScreen"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/roboto"
            android:text="@string/confirm_button" />

        <Button
            android:id="@+id/previous3Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/confirmButtonWelcomeScreen"
            android:fontFamily="@font/roboto"
            android:text="@string/previous_button" />

        <LinearLayout
            android:id="@+id/pageIndicatorsLayoutPage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/confirmButtonWelcomeScreen"
            android:layout_alignBottom="@id/confirmButtonWelcomeScreen"
            android:layout_alignParentBottom="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/page_indicator_dark" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/page_indicator_dark" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:src="@drawable/page_indicator_light" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>